Fix README dark mode color.

--- a/arcgis-ios-sdk-samples/Content Display Logic/Js/darkmode.css
+++ b/arcgis-ios-sdk-samples/Content Display Logic/Js/darkmode.css
@@ -3,7 +3,7 @@
         color: #f2f2f7;
     }
     body {
-        background-color: #1c1c1e;
+        background-color: #000000;
         color: #f2f2f7;
     }
     a:link {
